force-app/main/default/objects/VS_Session__c/VS_Session__c.object-meta.xml
<CustomObject>
    <label>VS Session</label>
    <pluralLabel>VS Sessions</pluralLabel>
    <description>F-001 slot-booking-core (VS-01, EP-01). The atomic capacity unit (D-007) and the single §3.4 SELECT ... FOR UPDATE lock target for every booking type (D-019/D-020, implemented in VS-09/VS-11 — no Apex/lock logic in this ticket). Authors VS_Total_Capacity__c and, via formulas, the walk-in reserve/bookable split (D-009). OWD is ControlledByParent (inherits Facility's Public Read Only, design §2.2). Retention class (Annexure C4): bookings 3 yr.</description>
    <sharingModel>ControlledByParent</sharingModel>
    <nameField>
        <displayFormat>SES-{00000}</displayFormat>
        <label>Session Name</label>
        <type>AutoNumber</type>
    </nameField>
</CustomObject>