force-app/main/default/objects/VS_Session__c/fields/VS_Bookable_Capacity__c.field-meta.xml
<CustomField>
    <fullName>VS_Bookable_Capacity__c</fullName>
    <label>Bookable Capacity</label>
    <description>Formula (design §2.1/§2.3): VS_Total_Capacity__c - VS_Walk_In_Reserve_Count__c. The portion of session capacity online/staff bookings may draw from; VS-06 distributes this total evenly across the session's generated VS_Slot__c rows (A-005) so sum(Slot.Capacity) == this value.</description>
    <type>Number</type>
    <precision>6</precision>
    <scale>0</scale>
    <formula>VS_Total_Capacity__c - VS_Walk_In_Reserve_Count__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
</CustomField>