force-app/main/default/objects/VS_Session__c/fields/VS_End_Time__c.field-meta.xml
<CustomField>
    <fullName>VS_End_Time__c</fullName>
    <label>End Time</label>
    <description>Session end (DateTime). Bounds VS-06 slot generation together with VS_Start_Time__c (D-007).</description>
    <type>DateTime</type>
    <required>true</required>
</CustomField>