force-app/main/default/objects/VS_Session__c/fields/VS_External_Id__c.field-meta.xml
<CustomField>
    <fullName>VS_External_Id__c</fullName>
    <label>External Id</label>
    <description>External system key reserved for a future CoWIN/U-WIN integration seam (OQ-016); not populated in F-001. Marked External ID + Unique per design §2.3; no composite default-value formula is set for this field in this ticket since VS-01's acceptance criteria only require the composite key behavior on VS_Facility_Service__c (see review packet).</description>
    <type>Text</type>
    <length>60</length>
    <externalId>true</externalId>
    <unique>true</unique>
</CustomField>