force-app/main/default/objects/VS_Session__c/fields/VS_Facility__c.field-meta.xml
<CustomField>
    <fullName>VS_Facility__c</fullName>
    <label>Facility</label>
    <description>Master-Detail to VS_Facility__c: the facility this session belongs to. Master-Detail (not Lookup) because a session is meaningless without its facility, inherits Facility's sharing, and cascades on facility lifecycle (design §2.4).</description>
    <type>MasterDetail</type>
    <referenceTo>VS_Facility__c</referenceTo>
    <relationshipLabel>Sessions</relationshipLabel>
    <relationshipName>VS_Sessions</relationshipName>
</CustomField>