force-app/main/default/objects/VS_Session__c/fields/VS_Is_Drive_Day__c.field-meta.xml
<CustomField>
    <fullName>VS_Is_Drive_Day__c</fullName>
    <label>Is Drive Day</label>
    <description>When checked, this session overrides a VS_Holiday__c closure for its facility+date only, so VS-06 slot generation opens this date even though the calendar marks it a holiday (D-018). Set by the MO via the VS-03 screen flow for special vaccination drives (e.g. Sunday drives). Scoped to this one session — does not affect the shared holiday calendar.</description>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>