force-app/main/default/objects/VS_Session__c/fields/VS_Service__c.field-meta.xml
<CustomField>
    <fullName>VS_Service__c</fullName>
    <label>Service</label>
    <description>Lookup (not Master-Detail) to VS_Service__c — the service this session provides capacity for. Lookup because Service is a shared catalogue row referenced by many sessions and must not cascade-delete (design §2.4).</description>
    <type>Lookup</type>
    <referenceTo>VS_Service__c</referenceTo>
    <relationshipLabel>Sessions</relationshipLabel>
    <relationshipName>VS_Sessions</relationshipName>
    <required>true</required>
    <deleteConstraint>Restrict</deleteConstraint>
</CustomField>