force-app/main/default/objects/VS_Session__c/fields/VS_Session_Date__c.field-meta.xml
<CustomField>
    <fullName>VS_Session_Date__c</fullName>
    <label>Session Date</label>
    <description>Calendar date this session runs. Used by VS-06 slot generation to check VS_Holiday__c closures and by VS_Setting__mdt.BookingHorizonDays to bound how far ahead slots are generated.</description>
    <type>Date</type>
    <required>true</required>
</CustomField>