force-app/main/default/objects/VS_Session__c/fields/VS_Start_Time__c.field-meta.xml
<CustomField>
    <fullName>VS_Start_Time__c</fullName>
    <label>Start Time</label>
    <description>Session start (DateTime). A facility that thinks in daily numbers defines one session covering its whole operating day; a facility that thinks per-session defines several (D-007). Bounds VS-06 slot generation.</description>
    <type>DateTime</type>
    <required>true</required>
</CustomField>