force-app/main/default/objects/VS_Session__c/fields/VS_Status__c.field-meta.xml
<CustomField>
    <fullName>VS_Status__c</fullName>
    <label>Status</label>
    <description>Session lifecycle status controlling whether it is open for booking. Values match design exactly: Open, Closed, Cancelled.</description>
    <type>Picklist</type>
    <required>true</required>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
                <default>true</default>
                <label>Open</label>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>