force-app/main/default/objects/VS_Session__c/listViews/Open_Sessions.listView-meta.xml
<ListView>
    <fullName>Open_Sessions</fullName>
    <columns>NAME</columns>
    <columns>VS_Facility__c</columns>
    <columns>VS_Service__c</columns>
    <columns>VS_Session_Date__c</columns>
    <columns>VS_Total_Capacity__c</columns>
    <columns>VS_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>VS_Status__c</field>
        <operation>equals</operation>
        <value>Open</value>
    </filters>
    <label>Open Sessions</label>
</ListView>